Bug 55709 - ScAnyRefDlg allows to create new sheet through the add button in the sheet tab bar
Summary: ScAnyRefDlg allows to create new sheet through the add button in the sheet ta...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-07 00:53 UTC by Markus Mohrhard
Modified: 2012-10-10 01:28 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2012-10-07 00:53:19 UTC
The little plus in the sheet tab bar needs to be protected when we are in an ScAnyRefDlg. Even worse it makes it possible that the table switches when the IsTableLocked returns true so allowing the user to insert references to other tables.
Comment 1 Markus Mohrhard 2012-10-07 00:55:03 UTC
Needs to be fixed for 3-7 to prevent crashes in the cond format code.
Comment 2 Not Assigned 2012-10-10 01:28:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da7edb8bd74eb3c42a4585254e5bb329905b56c8

in ScAnyRefDlg + table locked, don't allow creating new sheets,fdo#55709



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.