in ScAnyRefDlg + table locked, don't allow creating new sheets,fdo#55709

Change-Id: I8129b41288d20a0c2b6eac90ca5d25392fe0386f